# ai-keyboard-core

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  LICENSE  README.md  build.gradle  settings.gradle
.github/workflows/: fix-wrapper.yml  guardian.yml  main.yml  model-baker.yml
bindings/: native_bridge.cpp
bindings/Android/: JointVentureInputService.java
core/: ai_bridge.h  inference_bridge.cpp  npu_pipeline.cpp
java/com/jv/npu/: ClipboardGuard.java
res/layout/: keyboard_view.xml  prediction_toolbar.xml  preview.xml
res/xml/: method.xml  qwerty.xml
src/main/: AndroidManifest.xml
src/main/assets/: gemma.litertlm  master_layout.json
src/main/cpp/: CMakeLists.txt  jv_npu_engine.cpp
src/main/java/ai_keyboard/: JointVentureInputService.java
src/main/java/com/jv/ai_keyboard/: JointVentureInputService.java  JvNativeEngine.java  SettingsActivity.java
src/main/res/drawable/: ic_enter.xml  ic_launcher_foreground.xml  ic_settings.xml  key_bg_sovereign.xml  key_preview_background.xml
src/main/res/layout/: candidate_preview.xml  input.xml  key_preview.xml  prediction_toolbar.xml
src/main/res/values/: styles.xml
src/main/res/xml/: method.xml  qwerty.xml  symbols.xml
ui/: master_layout.json
